# tum_algorithmen_und_datenstrukturen

blatt1/: CMakeLists.txt  main.cpp
blatt1/exercises/: blatt1.cpp
blatt1/include/: blatt1.h
blatt1/tests/: blatt1test.cpp
blatt2/: CMakeLists.txt  main.cpp
blatt2/exercises/: blatt2.cpp
blatt2/include/: blatt2.h
blatt2/tests/: blatt2test.cpp
zentralübungen/Code Beispiele-20260419/: CMakeLists.txt
zentralübungen/Code Beispiele-20260419/include/: palindrome.h
zentralübungen/Code Beispiele-20260419/include/googletest/: MODULE.bazel  README.md
zentralübungen/Code Beispiele-20260419/include/googletest/googlemock/: CMakeLists.txt
zentralübungen/Code Beispiele-20260419/include/googletest/googletest/cmake/: internal_utils.cmake
zentralübungen/Code Beispiele-20260419/include/googletest/googletest/include/gtest/: gtest-message.h
zentralübungen/Code Beispiele-20260419/include/googletest/googletest/src/: gtest-port.cc
zentralübungen/Code Beispiele-20260419/utils/: CMakeLists.txt  utils.cpp  utils.h
zentralübungen/Code Beispiele-20260419/week1/: CMakeLists.txt  sorting.cpp  sorting_algorithms.cpp  sorting_algorithms.h
zentralübungen/Code Beispiele-20260419/week2/: CMakeLists.txt  findmax.cpp  range.cpp
zentralübungen/Code Beispiele-20260419/week3/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome_test.cpp
